--- a/style.css
+++ b/style.css
@@ -4,13 +4,56 @@
     background-color: #1F2937;
     font-family: "Roboto", sans-serif;
     display: flex;
+    flex-direction: row;
+    flex: 1;
+}
+
+.content-one {
+    font-family: "Roboto", sans-serif;
+    display: flex;
     flex-direction: column;
+    align-items: center;
+}
+
+.content-two {
+    background-color: #E5E7EB;
+    font-family: "Roboto", sans-serif;
+    display: flex;
+    flex-direction: column;
+    align-items: end;
+    padding: 128px;
+}
+
+.content-three {
+    background-color: #3882F6;
+    font-family: "Roboto", sans-serif;
+    display: flex;
+    flex-direction: row;
+    justify-content: space-around;
+    margin: 64px 128px;
+    color: #F9FAF8;
+    padding: 32px 64px;
+    border-radius: 8px;
+}
+
+.footer {
+    background-color: #1F2937;
+    font-family: "Roboto", sans-serif;
+    font-size: 18px;
+    color: #F9FAF8;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    padding: 48px;
 }
 
 .header-main {
     font-size: 48px;
     color: #F9FAF8;
     font-weight: 900;
+    width: 450px;
+    margin-top: 129px;
+    margin-bottom: 0px;
 }
 
 .header-secondary,
@@ -19,15 +62,13 @@
     color: #E5E7EB
 }
 
+.header-secondary {
+    width: 450px;
+}
+
 .logo {
     height: auto;
     width: 128px;
-}
-
-.button {
-    font-size: 18px;
-    color: #F9FAF8;
-    background-color: #3882F6;
 }
 
 .placeholder-image {
@@ -36,9 +77,22 @@
     background-color: gray;
 }
 
-.container-navigation {
+.container-left {
     display: flex;
-    justify-content: space-around;
+    flex-direction: column;
+    flex: 0.5 0.5 50%;
+    align-items: start;
+    margin-left: 128px;
+    margin-bottom: 96px;
+}
+
+.container-right {
+    display: flex;
+    flex-direction: column;
+    flex: 0.5 0.5 50%;
+    align-items: end;
+    margin-right: 128px;
+    margin-bottom: 96px;
 }
 
 .header-link {
@@ -47,30 +101,10 @@
     gap: 32px;
 }
 
-.container-header {
-    display: flex;
-    align-items: center;
-    justify-content: space-around;
-}
-
-.container-header-left {
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    justify-content: center;
-    flex: 0.25 1 0%;
-}
-
-.container-header-right {
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    flex: 0.25 1 0%;
-}
-
 .header.placeholder-image {
-    height: 200px;
-    width: 450px;
+    flex: 1 1 5%;
+    height: auto;
+    width: 600px;
     display: flex;
     align-items: center;
     justify-content: center;
@@ -81,8 +115,72 @@ ul {
 }
 
 .button {
+    font-size: 18px;
+    color: #F9FAF8;
+    background-color: #3882F6;
     border-radius: 10px;
     border-color: #3882F6;
     padding: 8px 24px;
-    margin: 8px;
+    margin-bottom: 8px;
+}
+
+.container-images {
+    display: flex;
+    flex-direction: row;
+}
+
+.information {
+    margin-top: 48px;
+    font-size: 36px;
+    color: #1F2937;
+    font-weight: 900;
+}
+
+.image {
+    border: 4px #3882F6;
+    border-radius: 24px;
+    border-style: solid;
+    height: 192px;
+    width: 192px;
+    margin-top: 32px;
+    margin-left: 32px;
+}
+
+.subtext-image {
+    width: 192px;
+    margin-top: 16px;
+    margin-left: 32px;
+    margin-bottom: 128px;
+    text-align: center;
+    font-size: 18px;
+    color: #1F2937;
+}
+
+.quote {
+    font-style: italic;
+    color: #1F2937;
+    font-size: 36px;
+    padding: 0px 192px;
+}
+
+.signature {
+    color: #1F2937;
+    font-weight: 900;
+    padding: 0px 256px;
+}
+
+.text-big {
+    font-size: 24px;
+    font-weight: 600;
+    padding-bottom: 8px;
+}
+
+.text-small {
+    font-size: 18px;
+    color: #E5E7EB
+}
+
+.button.bottom {
+    border-color: white;
+    margin-top: 8px;
 }
